docs: add current document contents

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -29,6 +29,7 @@
 \maketitle
 
 \begin{abstract}
+    % TODO
     La Fuerza Aeroespacial Colombiana (FAC), en alianza con la Universidad de los Andes, busca modernizar sus procesos mediante soluciones innovadoras para la protección ambiental. Su principal objetivo es preservar la Amazonia Colombiana mediante el análisis de videos capturados con sensores aerotransportados para detectar minería ilegal.
 
     Este análisis, tradicionalmente manual, ahora se enfocará en la detección automatizada de carreteras no pavimentadas y cuerpos de agua. Esta automatización optimiza la identificación de áreas afectadas, mejorando la precisión y eficiencia del proceso.
@@ -39,26 +40,15 @@
 \end{abstract}
 
 \begin{IEEEkeywords}
-Palabras clave; separadas; por punto y coma.
+Palabras clave; separadas; por punto y coma. %TODO
 \end{IEEEkeywords}
 
-\section{Introducción}
-Contenido de la introducción \cite{exampleReference}.
-
-\section{Estado del Arte}
-Contenido del estado del arte.
-
-\section{Materiales}
-Descripción de los materiales utilizados.
-
-\section{Métodos}
-Metodología empleada.
-
-\section{Resultados}
-Presentación de los resultados obtenidos.
-
-\section{Discusión y Conclusión}
-Análisis, discusión y conclusiones.
+\input{sections/introduccion/introduccion}
+\input{sections/estado-del-arte/estado-del-arte}
+\input{sections/materiales/materiales}
+\input{sections/metodos/metodos}
+\input{sections/resultados/resultados}
+\input{sections/discusion-conclusion/discusion-conclusion}
 
 \bibliographystyle{IEEEtran}
 \bibliography{references}
