--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,9 +1,55 @@
-@article{exampleReference,
-  author    = {John Smith and Alice Johnson},
-  title     = {Applications of AI in Aerial Surveillance},
-  journal   = {IEEE Transactions on Geoscience and Remote Sensing},
-  year      = {2020},
-  volume    = {58},
-  number    = {5},
-  pages     = {3210--3220}
+@article{albuquerque2024,
+  author = {A. M. de Albuquerque Teixeira and L. V. Batista and R. M. da Silva and L. M. T. Freitas and C. A. G. Santos},
+  title = {Dynamic monitoring of surface area and water volume of reservoirs using satellite imagery, computer vision and deep learning},
+  journal = {Remote Sens. Appl.: Soc. Environ.},
+  volume = {35},
+  pages = {101205},
+  year = {2024}
+}
+
+@article{ferreira2019,
+  author = {A. Ferreira and S. C. Felipussi and R. Pires and S. Avila and G. Santos and J. Lambert and A. Rocha},
+  title = {Eyes in the skies: A data-driven fusion approach to identifying drug crops from remote sensing images},
+  journal = {IEEE J. Sel. Top. Appl. Earth Obs. Remote Sens.},
+  volume = {12},
+  number = {12},
+  pages = {4773--4786},
+  year = {2019}
+}
+
+@misc{fac2023,
+  author = {{Oficina de Comunicaciones Estratégicas FAC}},
+  title = {Con gran éxito finalizó la segunda edición de Codefest Ad Astra 2023},
+  year = {2023},
+  howpublished = {\url{https://www.fac.mil.co/es/noticias/con-gran-exito-finalizo-la-segunda-edicion-codefest-ad-astra-2023}}
+}
+
+@article{pardini2025,
+  author = {G. R. Pardini and P. M. Tasinaffo and E. H. Shiguemori and T. N. Kuck and M. R. Maximo and W. R. Gyotoku},
+  title = {Improved Algorithm to Detect Clandestine Airstrips in Amazon RainForest},
+  journal = {Algorithms},
+  volume = {18},
+  number = {2},
+  pages = {102},
+  year = {2025}
+}
+
+@article{pinto2023,
+  author = {J. J. Pinto Hidalgo and J. A. Silva Centeno},
+  title = {Geospatial intelligence and artificial intelligence for detecting potential coca paste production infrastructure in the border region of Venezuela and Colombia},
+  journal = {J. Appl. Secur. Res.},
+  volume = {18},
+  number = {4},
+  pages = {1000--1050},
+  year = {2023}
+}
+
+@article{sloan2024,
+  author = {S. Sloan and R. R. Talkhani and T. Huang and J. Engert and W. F. Laurance},
+  title = {Mapping remote roads using artificial intelligence and satellite imagery},
+  journal = {Remote Sens.},
+  volume = {16},
+  number = {5},
+  pages = {839},
+  year = {2024}
 }
